# ricochet

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/bookworm/: Dockerfile  devcontainer.json
.devcontainer/fedora/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  release.yml
cmake/: ricochet-config.cmake.in
linux/: README.Debian  copyright
src/: agent.cpp  agent.h  client.cpp  client.h  logging.cpp  logging.h  main.cpp  proto.cpp  proto.h  relay.cpp  relay.h  repo.cpp  repo.h  ricochet.cpp  ricochet.h  server.cpp  server.h  session.cpp  session.h
tests/: main.cpp  relay.cpp  repo.cpp
tests/certs/: ca.crt  ca.key  client.crt  client.key  client.pem  server.crt  server.key  server.pem
tests/integration/: agent.cpp  client.cpp  fixture.cpp  fixture.h
tests/protocol/: buffer.cpp  couple.cpp  endpoint.cpp  enums.cpp  peer.cpp  query.cpp  reply.cpp  test_buffer.cpp  test_couple.cpp  test_endpoint.cpp  test_enums.cpp  test_peer.cpp  test_query.cpp  test_reply.cpp
